# TradingAgents

./: .gitignore  pyproject.toml
tradingagents-cc/: DESIGN.md  README.md  main.py  pyproject.toml
tradingagents-cc/.design/: audit-agent-sdk-research.json  audit-agents.json  audit-blockers.json  audit-cli.json  audit-config-llm.json  audit-dataflows.json  audit-graph.json  final-design.json
tradingagents-cc/config/: routine.toml
tradingagents-cc/scripts/: register_task.ps1  run_daily.ps1  store_token.ps1
tradingagents-cc/tests/: conftest.py  test_pipeline_mock.py  test_units.py
tradingagents-cc/tests/fixtures/: get_balance_sheet.txt  get_cashflow.txt  get_fundamentals.txt  get_global_news.txt  get_income_statement.txt  get_indicators.txt  get_insider_transactions.txt  get_news.txt  get_stock_data.txt
tradingagents-cc/tradingagents_cc/: __init__.py  checkpointer.py  cli.py  client.py  conditional_logic.py  default_config.py  memory.py  mock.py  nodes.py  pipeline.py  prompts.py  rating.py  reflection.py  reporting.py  routine.py  schemas.py  state.py  tools_data.py
